Fixed alignment issues in desktop version

--- a/css/main.css
+++ b/css/main.css
@@ -257,6 +257,9 @@ body {
   }
 }
 
+/* DESKTOPPP STOPP */
+
+/* DESKTOP ONLY BELOW */
 
 /* DESKTOP LAYOUT STARTS HERE */
 
@@ -271,7 +274,7 @@ body {
   .nav {
     display: grid;
     grid-template-columns: 20% 40% 20% 20%;
-    grid-template-rows: 15% 15% auto;
+    grid-template-rows:  auto;
     /* flex-direction: row; */
   }
 
@@ -280,22 +283,25 @@ body {
     height: 15px;
     width: 15px;
     grid-column: 1/2;
-    grid-row: 1/3;
-    margin-left: 10px;
-    margin-right: 10px;
-    align-self: end;
-    justify-self: end;
+    grid-row: 1/2;
+    margin-left: 25px;
+    /* margin-right: 10px; */
+    align-self: center;
+    justify-self: left;
   }
 
   .name {
     color: black;
     font-weight: 900;
-    grid-column: 2/3;
-    grid-row: 1/3;
+    grid-column: 1/2;
+    grid-row: 1/2;
     align-self: stretch;
+    justify-self: center;
     font-size: large;
+    margin-left: -15px;
   }
   .hamburgerMenu {
+    display: none;
     grid-column: 4/5;
     grid-row: 2/3;
     height: 30px;
@@ -303,12 +309,31 @@ body {
     align-self: center;
     justify-self: left;
   }
+
+  .headerLinks{
+    display: inline;
+    grid-column: 3/5;
+    /* grid-row: 2/3; */
+    justify-self: right;
+
+
+  }
+
+  .headerList{
+ padding: 20px;
+ margin-right: 25px;
+
+  }
+
+
+
   .jobTitle {
+    /* position: relative; */
     color: black;
-    grid-column: 1/3;
-    grid-row: 3/4;
-    margin-left: 40px;
-    /* justify-self: end; */
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-left: -40px;
+    justify-self: left;
   }
 
   /* ADDING CARD IN THE MIDDLE OF THE PAGE*/
@@ -446,34 +471,52 @@ body {
 
   .footer {
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: 20% 40% auto auto auto;
+    grid-template-rows: auto;
   }
 
   .footerCall {
-    grid-column: 1/2;
+    grid-column: 3/4;
     grid-row: 1/2;
     font-weight: bolder;
     justify-self: center;
+    align-self: center;
+
   }
 
   .footerWrite {
-    grid-column: 2/3;
+    grid-column: 4/5;
     grid-row: 1/2;
     font-weight: bolder;
     justify-self: center;
+    align-self: center;
+
   }
 
   .footerFollow {
-    grid-column: 1/2;
-    grid-row: 2/3;
+    grid-column: 5/6;
+    grid-row: 1/2;
     font-weight: bolder;
     justify-self: center;
+    align-self: center;
+
   }
+
+
+  .footerCopyRights {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    font-weight: bolder;
+    font-size: small;
+    justify-self: center;
+    align-self: center;
+    margin-left: 10%;
+  }
+
   a {
     text-decoration: none;
     font-size: small;
-    color: grey;
+    color: black;
   }
 
   ul > li {
@@ -490,13 +533,6 @@ body {
     filter: grayscale(100%);
   }
 
-  .footerCopyRights {
-    grid-column: 1/3;
-    grid-row: 3/4;
-    font-weight: bolder;
-    font-size: small;
-    justify-self: left;
-    margin-left: 10%;
-  }
+  
 
 
